# odot

./: .gitignore  README.md  odot.cabal  odot.nix
.velle/: main.cfg
app/: Logic.hs  Main.hs  Parser.hs  Tui.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
